<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">TOday-DO</string>
	<string name="action_settings">Settings</string>
	<string name="about">About</string>
	<string name="title">Title</string>
	<string name="content">Content</string>
	<string name="date">Date</string>
	<string name="save">Save</string>
	<string name="delete">Delete</string>
	<string name="cancel">Cancel</string>
	<string name="version">Version </string>
	<string name="update">Update</string>
	<string name="backup">Backup</string>
	<string name="restore">Restore</string>
	<string name="show_all_task">Show all tasks</string>
	<string name="open_source_license"><u>OpenSource License</u></string>

	<string name="your_task_is_completed_">Your task is completed?</string>

	<string name="title_new_task">new Task</string>
	<string name="title_modify_task">modify Task</string>
	<string name="title_delete_task">delete Task</string>
	<string name="message_delete_task">Are you sure you want to delete your task?</string>

	<string name="toast_empty_task">You must input a title :(</string>
	<string name="toast_max_tasks">You can add up to 6 tasks :(</string>
</resources>
