<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
	<item
		android:icon="@drawable/ic_more_white_24dp"
		android:title="@string/action_settings"
		app:showAsAction="ifRoom">
		<menu>
			<item
				android:id="@+id/action_show_all_task"
				android:checkable="true"
				android:icon="@drawable/ic_hide_accent_24dp"
				android:orderInCategory="100"
				android:title="@string/show_all_task"
				app:showAsAction="never"/>
			<item
				android:id="@+id/action_backup"
				android:icon="@drawable/ic_backup_accent_24dp"
				android:orderInCategory="100"
				android:title="@string/backup"
				app:showAsAction="never"/>
			<item
				android:id="@+id/action_restore"
				android:icon="@drawable/ic_restore_accent_24dp"
				android:orderInCategory="100"
				android:title="@string/restore"
				app:showAsAction="never"/>
			<item
				android:id="@+id/action_about"
				android:icon="@drawable/ic_info_accent_24dp"
				android:orderInCategory="101"
				android:title="@string/about"
				app:showAsAction="never"/>
		</menu>
	</item>
</menu>
