<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingEnd="24dp"
	android:paddingStart="24dp"
	android:paddingTop="12dp">

	<android.support.design.widget.TextInputLayout
		android:id="@+id/tilTitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<EditText
			android:id="@+id/etTitle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/title"
			android:inputType="text"
			android:maxLines="1"
			android:textColor="@color/textColorPrimary"
			android:textSize="18sp"/>
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/tilContent"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<EditText
			android:id="@+id/etContent"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/content"
			android:inputType="textMultiLine"
			android:textColor="@color/textColorPrimary"
			android:textSize="14sp"/>
	</android.support.design.widget.TextInputLayout>


	<!-- Don't need to add a completed task ?:^) -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:orientation="horizontal"
		android:visibility="gone">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/your_task_is_completed_"
			android:textColor="@color/textColorPrimary"
			android:textSize="14sp"/>

		<Switch
			android:id="@+id/swComplete"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>
</LinearLayout>